--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "react-demo",
   "version": "0.1.0",
-  "homepage": "http:/jianghanyue.github.io/mozan",
+  "homepage": "http://jianghanyue.github.io/mozan",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
     "react-slick": "^0.15.4"
   },
